pkg/testdata/TestPatchVirtualService/use-cases/match-by-uri-and-port/delegateVS-with-multiple-routes_no-uri-match_found/result/TestMatchByUriAndPort-delegateVS-with-multiple-routes-no-uri-match-found.golden-0.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-shipping-bg
  namespace: test-namespace
spec:
  gateways:
  - mesh
  hosts:
  - istio-shipping-bg.test-namespace.svc.cluster.local
  - istio-shipping.test-namespace.svc.mesh.sfdc.net
  http:
  - delegate:
      name: istio-shipping-bg1-7442
      namespace: test-namespace
    match:
    - port: 7442
    name: http-7442
  - delegate:
      name: istio-shipping-bg1-7443
      namespace: test-namespace
    match:
    - port: 7443
    name: http-7443
